repology-updater/tests/parser_tests/snapshots/parsers__parser_tests__freebsd__error_bad_package_format.snap
---
source: repology-updater/tests/parser_tests/freebsd.rs
expression: "FreeBsdParser\n{}.parse(Path::new(\"tests/parser_tests/freebsd/INDEX-5\"), &mut packages,)"
---
Err(
    Error {
        context: "on line 1",
        source: "expected <package name>-<version> in the first field",
    },
)
