repology-updater/tests/parser_tests/snapshots/parsers__parser_tests__freebsd__error_bad_package_path.snap
---
source: repology-updater/tests/parser_tests/freebsd.rs
expression: "FreeBsdParser\n{}.parse(Path::new(\"tests/parser_tests/freebsd/error6\"), &mut packages,)"
---
Err(
    Error {
        context: "on line 1",
        source: "unexpectedly short port path (expected at least category/name)",
    },
)
