repology-updater/tests/parser_tests/snapshots/parsers__parser_tests__freebsd__error_missing_version.snap
---
source: repology-updater/tests/parser_tests/freebsd.rs
expression: "FreeBsdParser\n{}.parse(Path::new(\"tests/parser_tests/freebsd/INDEX-3\"), &mut packages,)"
---
Err(
    Error {
        context: "on line 1",
        source: EmptyVersion,
    },
)
