repology-updater/tests/parser_tests/snapshots/parsers__parser_tests__freebsd__freebsd.snap
---
source: repology-updater/tests/parser_tests/freebsd.rs
expression: packages.packages
---
[
    Package {
        projectname_seed: "ar-aspell",
        version: "1.2.0",
    },
]
